naive implementation of doc builder

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "bobril": "^7.2.0",
     "bobril-m": "^0.9.0",
-    "bobril-m-icons": "^2.0.0"
+    "bobril-m-icons": "^2.0.0",
+    "fs": "0.0.1-security",
+    "highlight.js": "^9.12.0",
+    "remarkable": "^1.7.1"
   }
 }
