Insert TS const instead of iframe. Compile.js require arguments.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "dir": "."
   },
   "scripts": {
-    "build": "node srcDocBuilder/compile.js && bb b -v dist"
+    "build": "node srcDocBuilder/compile.js --srcDirectory=./doc/ --outputFile=./src/generatedDoc.ts && bb b -v dist"
   },
   "dependencies": {
     "bobril": "^7.2.0",
     "bobril-m": "^0.9.0",
     "bobril-m-icons": "^2.0.0",
+    "command-line-args": "^4.0.6",
     "fs": "0.0.1-security",
     "highlight.js": "^9.12.0",
     "remarkable": "^1.7.1"
