--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dir": "."
   },
   "scripts": {
-    "build": "node srcDocBuilder/compile.js --srcDirectory=./doc/ --outputFile=./src/generatedDoc.ts && bb b -v dist"
+    "build": "node srcDocBuilder/compile.js --srcDirectory=./doc/ --outputFile=./src/generatedDoc.ts && bb b -s 1 -v dist"
   },
   "dependencies": {
     "bobril": "^7.2.0",
