--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "command-line-args": "^4.0.6",
     "fs": "0.0.1-security",
     "highlight.js": "^9.12.0",
+    "markdown-toc": "^1.1.0",
     "remarkable": "^1.7.1"
+  },
+  "resolutions": {
+    "argparse": "1.0.9",
+    "kind-of": "4.0.0",
+    "is-number": "3.0.0"
   }
 }
