--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dir": "."
   },
   "scripts": {
-    "build": "node srcDocBuilder/compile.js --srcDirectory=./doc/ --outputFile=./src/generatedDoc.ts && bb b -s 1 -v dist"
+    "build-doc": "node srcDocBuilder/main.js --srcDirectory=./doc/ --outputFile=./src/generatedDoc.ts",
+    "build-page": "bb b -s 1 -v dist",
+    "build": "npm run build-doc && npm run build-page"
   },
   "dependencies": {
     "bobril": "^7.2.0",
