--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "homepage": "https://github.com/Xrew/bobril.github.io#readme",
   "bobril": {
     "title": "Bobril - Component oriented framework",
-    "dir": "."
+    "dir": ".",
+    "head": "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css\"><script src=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js\"></script>"
   },
   "scripts": {
     "build-doc": "node tools/docBuilder/main.js --outputType=ts --srcDirectory=./doc/ --outputDirectory=./src/generatedDoc",
