--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "command-line-args": "^4.0.6",
     "fs": "0.0.1-security",
     "fs-extra": "^4.0.1",
+    "github-markdown-css": "^2.8.0",
     "highlight.js": "^9.12.0",
     "markdown-toc": "^1.1.0",
     "remarkable": "^1.7.1"
