Added highlighting to front page.

--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
     "build": "npm run build-doc && npm run build-page"
   },
   "dependencies": {
-    "bobril": "^7.2.0",
-    "bobril-m": "^0.9.0",
-    "bobril-m-icons": "^2.0.0",
-    "command-line-args": "^4.0.6",
-    "fs": "0.0.1-security",
-    "fs-extra": "^4.0.1",
-    "github-markdown-css": "^2.8.0",
-    "highlight.js": "^9.12.0",
-    "markdown-toc": "^1.1.0",
-    "remarkable": "^1.7.1"
+    "bobril": "*",
+    "bobril-highlightjs": "*",
+    "bobril-m": "*",
+    "bobril-m-icons": "*",
+    "command-line-args": "*",
+    "fs": "*",
+    "fs-extra": "*",
+    "github-markdown-css": "*",
+    "highlight.js": "*",
+    "markdown-toc": "*",
+    "remarkable": "*"
   },
   "resolutions": {
+    "array-back": "2.0.0",
     "argparse": "1.0.9",
     "kind-of": "4.0.0",
     "is-number": "3.0.0",
-    "array-back": "2.0.0",
     "isobject": "3.0.1"
   }
 }
