Split Documentation to Docs and Guides tab

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "head": "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css\"><script src=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js\"></script>"
   },
   "scripts": {
+    "build-guides": "node tools/docBuilder/main.js --outputType=ts --srcDirectory=./guides/ --outputDirectory=./src/generatedGuides",
     "build-doc": "node tools/docBuilder/main.js --outputType=ts --srcDirectory=./doc/ --outputDirectory=./src/generatedDoc",
     "build-page": "bb b -s 1 -v dist",
-    "build": "npm run build-doc && npm run build-page"
+    "build": "npm run build-guides && npm run build-doc && npm run build-page"
   },
   "dependencies": {
     "bobril": "*",
