yaml, m2bobril, not working now
MD config -> YAML
Convert Markdown to Bobril
Not implemented completly. Generate wrapper page and write output
missing.

--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "fs": "*",
     "fs-extra": "*",
     "github-markdown-css": "*",
-    "highlight.js": "*",
-    "markdown-toc": "*",
-    "remarkable": "*"
+    "js-yaml": "*",
+    "remark": "*",
+    "remark-frontmatter": "*",
+    "remark-highlight.js": "*",
   },
   "resolutions": {
     "array-back": "2.0.0",
