--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "head": "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css\"><script src=\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js\"></script>"
   },
   "scripts": {
+    "build-generator": "tsc -p tsconfig.generator.json",
+    "build-generator:watch": "tsc -w -p tsconfig.generator.json",
+    "prebuild-guides": "npm run build-generator",
+    "prebuild-doc": "npm run build-generator",
     "build-guides": "node tools/docBuilder/main.js --outputType=ts --srcDirectory=./guides/ --outputDirectory=./src/generatedGuides",
     "build-doc": "node tools/docBuilder/main.js --outputType=ts --srcDirectory=./doc/ --outputDirectory=./src/generatedDoc",
     "build-page": "bb b -s 1 -v dist",
@@ -34,15 +38,23 @@
     "fs-extra": "*",
     "github-markdown-css": "*",
     "js-yaml": "*",
+    "path": "^0.12.7",
     "remark": "*",
+    "remark-bobril": "*",
     "remark-frontmatter": "*",
     "remark-highlight.js": "*",
+    "remark-yaml-meta": "^0.1.0"
   },
   "resolutions": {
     "array-back": "2.0.0",
     "argparse": "1.0.9",
     "kind-of": "4.0.0",
     "is-number": "3.0.0",
-    "isobject": "3.0.1"
+    "isobject": "3.0.1",
+    "inherits": "2.0.3",
+    "minimist": "1.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^2.5.2"
   }
 }
