--- a/examples/routing/tsconfig.json
+++ b/examples/routing/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": false,
     "checkJs": false,
-    "declaration": false,
+    "declaration": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "jsx": "react",
@@ -17,12 +17,17 @@
     ],
     "module": "commonjs",
     "noEmitHelpers": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "preserveConstEnums": false,
     "reactNamespace": "b",
     "removeComments": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "sourceMap": true,
+    "strict": true,
     "target": "es5",
     "resolveJsonModule": true
   },
