--- a/examples/todo-advanced-bobx/tsconfig.json
+++ b/examples/todo-advanced-bobx/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": false,
     "checkJs": false,
     "declaration": true,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
     "jsx": "react",
     "lib": [
@@ -11,6 +12,7 @@
       "es2015.core",
       "es2015.promise",
       "es2015.iterable",
+      "es2015.generator",
       "es2015.collection"
     ],
     "module": "commonjs",
@@ -30,8 +32,7 @@
     "resolveJsonModule": true
   },
   "files": [
-    "node_modules/bobril/jsx.d.ts",
-    "C:/Users/t.rut/.bbcore/tools/jasmine.d.ts"
+    "C:/Users/t.rut/.bbcore/tools/jasmine330.d.ts"
   ],
   "include": [
     "**/*"
