--- a/tools/package.json
+++ b/tools/package.json
@@ -17,6 +17,7 @@
     "@types/marked": "^0.6.5",
     "@types/node": "^12.0.4",
     "fs-extra": "^8.1.0",
-    "marked": "^0.6.2"
+    "marked": "^0.6.2",
+    "tslib": "^1.10.0"
   }
 }
