--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
+    "importHelpers": true,
     "lib": [
       "es5",
       "dom",
