--- a/examples/hooks/package.json
+++ b/examples/hooks/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bobril": "^13.1.2"
+    "bobril": "^13.1.2",
+    "bobx": "^0.28.0"
   },
   "prettier": {
     "printWidth": 100
