--- a/examples/todo-advanced-bobx/package.json
+++ b/examples/todo-advanced-bobx/package.json
@@ -7,7 +7,11 @@
     "bobx": "^0.27.1"
   },
   "devDependencies": {
-    "bb-tslint-plugin": "^1.2.2"
+    "eslint": "*",
+    "eslint-config-bobril": "*",
+    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "typescript": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
