--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -6,7 +6,11 @@
     "bobril": "^11.2.0"
   },
   "devDependencies": {
-    "bb-tslint-plugin": "^1.2.2"
+    "eslint": "*",
+    "eslint-config-bobril": "*",
+    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "typescript": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
