--- a/examples/todo-advanced-bobx/tsconfig.json
+++ b/examples/todo-advanced-bobx/tsconfig.json
@@ -32,10 +32,6 @@
     "target": "es5",
     "resolveJsonModule": true
   },
-  "files": [
-    "C:/Users/k.nachtneblova/.bbcore/tools/jasmine330.d.ts"
-  ],
-  "include": [
-    "**/*"
-  ]
+  "files": ["C:/Users/t.rut/.bbcore/tools/jasmine330.d.ts"],
+  "include": ["**/*"]
 }
