--- a/examples/todo-advanced-bobx/tsconfig.json
+++ b/examples/todo-advanced-bobx/tsconfig.json
@@ -32,6 +32,10 @@
     "target": "es5",
     "resolveJsonModule": true
   },
-  "files": ["C:/Users/t.rut/.bbcore/tools/jasmine330.d.ts"],
-  "include": ["**/*"]
+  "files": [
+    "/Users/tomasrut/.bbcore/tools/jasmine330.d.ts"
+  ],
+  "include": [
+    "**/*"
+  ]
 }
