Bobril page - add debug logs

--- a/bobril-page/tsconfig.json
+++ b/bobril-page/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "lib": [
       "es5",
