--- a/bobril-page/package.json
+++ b/bobril-page/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@types/marked": "^1.2.2",
     "@types/prismjs": "1.16.0",
-    "bobril": "^14.6.0",
+    "bobril": "*",
     "bobrilstrap": "^3.4.0",
-    "bobx": "^0.27.1",
+    "bobx": "*",
     "bootswatch": "3.4.1",
     "marked": "^2.0.0",
     "prism-themes": "1.3.0",
@@ -16,10 +16,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
-    "eslint-config-bobril": "^1.0.2",
+    "eslint": "*",
+    "eslint-config-bobril": "*",
     "prettier": "^1.19.1",
-    "typescript": "^3.8.3"
+    "typescript": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,20 +30,27 @@
     "additionalResourcesDirectory": "resources/staticResources",
     "buildOutputDir": "../",
     "compilerOptions": {
-      "declaration": true,
       "strict": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
       "noImplicitReturns": true,
-      "noFallthroughCasesInSwitch": true,
-      "noEmitHelpers": true,
-      "preserveConstEnums": false,
-      "removeComments": false,
-      "skipLibCheck": true,
-      "skipDefaultLibCheck": true,
-      "sourceMap": true
+      "noFallthroughCasesInSwitch": true
     }
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "resolutions": {
+    "bobril": "17.10.0",
+    "eslint-visitor-keys": "2.1.0",
+    "estraverse": "5.2.0",
+    "ajv": "8.6.2",
+    "chalk": "4.1.1",
+    "escape-string-regexp": "4.0.0",
+    "ansi-styles": "4.3.0",
+    "supports-color": "7.2.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "has-flag": "4.0.0",
+    "json-schema-traverse": "1.0.0"
+  }
 }
